--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ env:
     - MAVEN_VERSION="3.6.3"
 before_install:
   - travis_retry git clone --depth 1 $GRAVIS_REPO $GRAVIS
-  - source $GRAVIS/install-jdk
-  - source $GRAVIS/install-maven
+  - source $GRAVIS/install-jdk ; source $GRAVIS/install-maven
 cache:
   directories:
     - $HOME/.jabba/
