--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>1.24.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.maven</groupId>
