--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.zg2pro.formatter</groupId>
-    <artifactId>zg2pro-formatter-plugin</artifactId>
+    <artifactId>zg2pro-formatter-plugin-pom</artifactId>
     <version>0.8-SNAPSHOT</version>
-    <packaging>maven-plugin</packaging>
+    <packaging>pom</packaging>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -14,8 +14,12 @@
         <version.org.ec4j.linters>0.1.2</version.org.ec4j.linters>
     </properties>
     <url>https://github.com/zg2pro/zg2pro-formatter-plugin</url>
-    <name>zg2pro-formatter-plugin</name>
+    <name>zg2pro-formatter-plugin-pom</name>
     <description>This maven plugin enabled strong rules for formatting your java project, without relying on the IDEs formatting features</description>
+
+	<modules>
+		<module>strict</module>
+	</modules>
 
     <licenses>
         <license>
@@ -45,7 +49,7 @@
             <plugin>
                 <groupId>com.github.zg2pro.formatter</groupId>
                 <artifactId>zg2pro-formatter-plugin</artifactId>
-                <version>0.6</version>
+                <version>0.7</version>
                 <executions>
                     <execution>
                         <goals>
@@ -54,79 +58,8 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.6.0</version>
-            </plugin>
-            <plugin>
-                <groupId>io.takari.maven.plugins</groupId>
-                <artifactId>takari-lifecycle-plugin</artifactId>
-                <version>1.13.9</version>
-                <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <id>testProperties</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>testProperties</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.tika</groupId>
-            <artifactId>tika-core</artifactId>
-            <version>1.24.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-plugin-api</artifactId>
-            <version>3.6.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugin-tools</groupId>
-            <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.6.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.twdata.maven</groupId>
-            <artifactId>mojo-executor</artifactId>
-            <version>2.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jgit</groupId>
-            <artifactId>org.eclipse.jgit</artifactId>
-            <version>5.7.0.202003110725-r</version>
-        </dependency>
-        <dependency>
-            <groupId>org.ec4j.linters</groupId>
-            <artifactId>editorconfig-lint-api</artifactId>
-            <version>${version.org.ec4j.linters}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.ec4j.linters</groupId>
-            <artifactId>editorconfig-linters</artifactId>
-            <version>${version.org.ec4j.linters}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.takari.maven.plugins</groupId>
-            <artifactId>takari-plugin-testing</artifactId>
-            <scope>test</scope>
-            <version>2.9.2</version>
-        </dependency>
-        <dependency>
-            <groupId>io.takari.maven.plugins</groupId>
-            <artifactId>takari-plugin-integration-testing</artifactId>
-            <type>pom</type>
-            <scope>test</scope>
-            <version>2.9.2</version>
-        </dependency>
-    </dependencies>
 
     <repositories>
         <repository>
