--- a/pom.xml
+++ b/pom.xml
@@ -89,9 +89,9 @@
                         <configuration>
                             <artifacts>
                                 <artifact>
-                                    <file>src/main/binaries/node-12.16-npm-6.14.zip</file>
+                                    <file>src/main/binaries/node-12.16.zip</file>
                                     <type>zip</type>
-                                    <classifier>node-12.16-npm-6.14</classifier>
+                                    <classifier>node-12.16</classifier>
                                 </artifact>
                             </artifacts>
                         </configuration>
@@ -138,7 +138,12 @@
         <dependency>
             <groupId>net.lingala.zip4j</groupId>
             <artifactId>zip4j</artifactId>
-            <version>2.6.4</version>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codenarc</groupId>
+            <artifactId>CodeNarc</artifactId>
+            <version>0.16</version>
         </dependency>
 
         <dependency>
