Integration groovy formater (#12)
* groovy formater

* testing my groovy formatter

* works at the second shot

* this way it worked

Co-authored-by: Gregory Anne <ganne@effisoft-group.com>

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,30 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-node</id>
+                        <goals>
+                            <goal>attach-artifact</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <artifacts>
+                                <artifact>
+                                    <file>src/main/binaries/node-12.16.zip</file>
+                                    <type>zip</type>
+                                    <classifier>node-12.16</classifier>
+                                </artifact>
+                            </artifacts>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -113,6 +137,12 @@
             <artifactId>editorconfig-linters</artifactId>
             <version>${version.org.ec4j.linters}</version>
         </dependency>
+        <dependency>
+            <groupId>net.lingala.zip4j</groupId>
+            <artifactId>zip4j</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+
         <dependency>
             <groupId>io.takari.maven.plugins</groupId>
             <artifactId>takari-plugin-testing</artifactId>
