code moves to the core component

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <description>This maven plugin enabled strong rules for formatting your java project, without relying on the IDEs formatting features</description>
 
     <modules>
+        <module>core</module>
         <module>strict</module>
     </modules>
 
@@ -60,6 +61,35 @@
             </plugin>
 
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>3.0.0</version>
+                    <executions>
+                        <execution>
+                            <id>attach-node</id>
+                            <goals>
+                                <goal>attach-artifact</goal>
+                            </goals>
+                            <phase>package</phase>
+                            <configuration>
+                                <artifacts>
+                                    <artifact>
+                                        <file>../core/src/main/binaries/node-12.16.zip</file>
+                                        <type>zip</type>
+                                        <classifier>node-12.16</classifier>
+                                    </artifact>
+                                </artifacts>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+
+            </plugins>
+        </pluginManagement>
     </build>
 
     <repositories>
