--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,28 @@
             <artifactId>zip4j</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <!--dependency>
+            <groupId>org.eclipse.jface</groupId>
+            <artifactId>text</artifactId>
+            <version>3.3.0-v20070606-0010</version>
+        </dependency>
+        <dependency>
+    <groupId>org.codehaus.groovy</groupId>
+    <artifactId>groovy-all</artifactId>
+    <version>3.0.6</version>
+    <type>pom</type>
+</dependency-->
+        <dependency>
+            <groupId>org.netbeans.modules</groupId>
+            <artifactId>org-netbeans-modules-groovy-refactoring</artifactId>
+            <version>RELEASE121</version>
+        </dependency>
+        <dependency>
+            <groupId>org.netbeans.modules</groupId>
+            <artifactId>org-netbeans-modules-groovy-editor</artifactId>
+            <version>RELEASE121</version>
+        </dependency>
+
 
         <dependency>
             <groupId>io.takari.maven.plugins</groupId>
