--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -4,4 +4,11 @@ jobs:
   linux-build:
     runs-on: ubuntu-latest
     steps:
-      - run: mvn clean install
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots verify
