--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <developers>
         <developer>
             <name>Gregory Anne</name>
-            <email>englishblazere@free.fr</email>
+            <email>gregory.anne.jobs@gmail.com</email><!-- might have to keep using the old email for sonatype account-->
             <url>https://github.com/zg2pro</url>
         </developer>
     </developers>
